--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation project(':library')
-    implementation 'com.github.huangyu0522:SlidingCheckLayout:1.0.2'
+    implementation project(':library')
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
 
